fix font-size for fom and send button on mobile

--- a/F8 - The Band/assets/css/responsive.css
+++ b/F8 - The Band/assets/css/responsive.css
@@ -18,7 +18,12 @@
     }
 
     .contact-form .form-control {
-        padding: 15px
+        padding: 15px;
+        font-size: 16px;
+    }
+
+    .contact-submit-btn {
+        font-size: 16px;
     }
 
     #footer .socials-list {
