--- a/F8 - The Band/assets/css/style.css
+++ b/F8 - The Band/assets/css/style.css
@@ -38,6 +38,8 @@ html {
     display: inline-block;
     margin-top: 18px;
     border: none;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
